--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.8.0",
-    "@cap-js/sqlite": "^1",
     "@sap/cds-dk": "^8",
     "mbt": "^1.2.29",
     "rimraf": "^5.0.5"
@@ -34,6 +33,9 @@
       "native_hana_associations": false
     },
     "requires": {
+      "db": {
+        "kind": "sql"
+      },
       "auth": "mocked",
       "[production]": {
         "auth": "xsuaa"
