--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sap/hana-client": "^2.23.24",
     "@sap/xssec": "^4",
     "express": "^4",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.8.0",
